Fix selected group not visible

--- a/data/themes/darktable.css
+++ b/data/themes/darktable.css
@@ -1340,6 +1340,7 @@ cell:selected
 
 /* Main states */
 button:active,
+button:checked,
 button:selected,
 menuitem:active,
 menuitem:selected,
